--- a/packages/hardhat-ts/package.json
+++ b/packages/hardhat-ts/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@atixlabs/hardhat-time-n-mine": "^0.0.5",
+    "@chainlink/contracts": "^0.3.1",
     "@defi-wonderland/smock": "^2.0.7",
     "@eth-optimism/hardhat-ovm": "^0.2.4",
     "@ethereum-waffle/ens": "^3.3.1",
