Added Moralis, fetch nfts for connected account

--- a/packages/vite-app-ts/package.json
+++ b/packages/vite-app-ts/package.json
@@ -54,6 +54,7 @@
     "history": "^5.2.0",
     "http-browserify": "^1.7.0",
     "ipfs-http-client": "^55.0.0",
+    "moralis": "^1.2.6",
     "pretty-time": "^1.1.0",
     "process": "^0.11.10",
     "qrcode.react": "^1.0.1",
