Added Moralis app config to env

--- a/packages/vite-app-ts/.env
+++ b/packages/vite-app-ts/.env
@@ -1,5 +1,7 @@
-VITE_APP_TARGET_NETWORK=mumbai
-HARDHAT_TARGET_NETWORK=mumbai
+VITE_APP_TARGET_NETWORK=localhost
+HARDHAT_TARGET_NETWORK=localhost
+MORALIS_SERVER=https://mqae4ktqaurd.usemoralis.com:2053/server
+MORALIS_APP_ID=wZFcpqX8tY96qQXEN7kBM3t349ycH0ITFMPUuWMi
 
 # network
 VITE_RPC_MAINNET=https://rpc.scaffoldeth.io:48544
