--- a/packages/vite-app-ts/package.json
+++ b/packages/vite-app-ts/package.json
@@ -63,6 +63,7 @@
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
+    "react-moralis": "^1.2.2",
     "react-qr-reader": "^2.2.1",
     "react-query": "^3.34.12",
     "react-router-dom": "^5.3.0",
